# NYCU_ParallelProgramming_FinalProject

Cuda/: stereo.cu
Pthread/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  perf.data  perf.data.old  pseudocode.txt
Serial/: BM_serial.cpp  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  perf.data  perf.data.old
