cmake_minimum_required(VERSION 2.8)
project( DisplayImage LANGUAGES C CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -mavx -ffast-math -fopt-info-vec -march=native -std=c++17")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -mavx -ffast-math -fopt-info-vec -march=native")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage BM_serial.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(DisplayImage PUBLIC OpenMP::OpenMP_CXX)
endif()
